crates/synd_term/tests/snapshots/integration__test__filter_entries_category_filter_entries.snap
---
source: crates/synd_term/tests/integration.rs
description: entris after enable category filter
expression: application.buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 30 },
    content: [
        "  Syndicationd                                                                                     󱉯 Entries    󰑫 Feeds ",
        "  󰈶 Filter    MAY   󰭎 a  b (Esc/+/-)                                                                                   ",
        "   Search                                                                                                              ",
        "                                                                                                                        ",
        "  Published   Entry 1/30                                                         Feed                               Req ",
        " 2024-06-03  󰭎 2024-06-03                                                       observability news                 SHD▐",
        "  2024-05-27  󰭎 2024-05-27                                                       observability news                 SHD▐",
        "  2024-05-20  󰭎 2024-05-20                                                       observability news                 SHD▐",
        "  2024-05-13  󰭎 2024-05-13                                                       observability news                 SHD▐",
        "  2024-05-06  󰭎 2024-05-06                                                       observability news                 SHD▐",
        "  2024-04-29  󰭎 2024-04-29                                                       observability news                 SHD ",
        "  2024-04-22  󰭎 2024-04-22                                                       observability news                 SHD ",
        "  2024-04-15  󰭎 2024-04-15                                                       observability news                 SHD ",
        "  2024-04-08  󰭎 2024-04-08                                                       observability news                 SHD ",
        "  2024-04-01  󰭎 2024-04-01                                                       observability news                 SHD ",
        "  2024-03-25  󰭎 2024-03-25                                                       observability news                 SHD ",
        "  2024-03-18  󰭎 2024-03-18                                                       observability news                 SHD ",
        "  2024-03-11  󰭎 2024-03-11                                                       observability news                 SHD ",
        "  2024-03-04  󰭎 2024-03-04                                                       observability news                 SHD ",
        "  2024-02-26  󰭎 2024-02-26                                                       observability news                 SHD ",
        "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────",
        "  󰯂 Entry     2024-06-03                                                                                                ",
        "  󰏌 URL       https://buttondown.email/o11y.news/archive/2024-06-03/                                                    ",
        "   Published 2024-06-03 20:00 (+00:00)                                                                                 ",
        "                                                                                                                        ",
        "  󱙓 Summary                                                                                                             ",
        "  ## Booking.com’s o11y platform                                                                                        ",
        "                                                                                                                        ",
        "  Santanu Sahoo shared [Events: The 4th pillar of Booking.com’s Observability platform][1] where he describes           ",
        "                              Tab:󰹳  j/k:󰹹  gg:󱞧  ge:󱞥  c:  /:  h/l:  Ent:󰏌  r:󰑓  q:                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: BOLD,
        x: 14, y: 0, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 99, y: 0, fg: Rgb(255, 160, 122), bg: Rgb(43, 41, 45), underline: Reset, modifier: BOLD,
        x: 108, y: 0, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: DIM,
        x: 10, y: 1, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 14, y: 1, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: DIM,
        x: 17, y: 1, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 20, y: 1, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 21, y: 1, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 22, y: 1, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: UNDERLINED,
        x: 23, y: 1, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 24, y: 1, fg: Rgb(247, 76, 0), bg: Rgb(43, 41, 45), underline: Reset, modifier: DIM,
        x: 25, y: 1, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 26, y: 1, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: DIM,
        x: 27, y: 1, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 28, y: 1, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: DIM,
        x: 37, y: 1, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: DIM,
        x: 10, y: 2, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: BOLD | UNDERLINED,
        x: 0, y: 5, fg: Rgb(255, 160, 122), bg: Rgb(43, 41, 45), underline: Reset, modifier: BOLD,
        x: 119, y: 5, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: BOLD,
        x: 0, y: 6, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 14, y: 6, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 15, y: 6, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 14, y: 7, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 15, y: 7, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 14, y: 8, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 15, y: 8, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 14, y: 9, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 15, y: 9, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 14, y: 10, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 15, y: 10, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 14, y: 11, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 15, y: 11, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 14, y: 12, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 15, y: 12, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 14, y: 13, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 15, y: 13, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 14, y: 14, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 15, y: 14, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 14, y: 15, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 15, y: 15, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 14, y: 16, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 15, y: 16, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 14, y: 17, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 15, y: 17, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 14, y: 18, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 15, y: 18, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 14, y: 19, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 15, y: 19, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 2, y: 21, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: BOLD,
        x: 9, y: 21, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 2, y: 22, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: BOLD,
        x: 7, y: 22, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 2, y: 23, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: BOLD,
        x: 13, y: 23, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 2, y: 25, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: BOLD | UNDERLINED,
        x: 11, y: 25, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 30, y: 29, fg: Rgb(111, 93, 99), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 90, y: 29, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
    ]
}
